@@ -11,9 +11,7 @@ import org.springframework.stereotype.Service;
 import javax.persistence.EntityNotFoundException;
 import javax.transaction.Transactional;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,43 +23,41 @@ public class LocationServiceImpl implements LocationService {
     @Override
     public List<LocationDto> getAllLocations() {
         log.info("Getting list of location");
-        return locationRepository.findAll().stream().map(LocationDto::fromLocation).collect(Collectors.toList());
+        return locationRepository.findAll().stream().map(LocationDto::fromLocation).toList();
     }
 
     @Override
-    public Location findLocationById(Long locationId) {
+    public Location findLocationById(final Long locationId) {
         log.info("Searching for location with id {}", locationId);
-        return locationRepository.findById(locationId).orElseThrow(() -> new EntityNotFoundException("Location with id = " + locationId + " not found"));
+        return locationRepository.findById(locationId).orElseThrow(() -> new EntityNotFoundException());
     }
 
     @Override
     @Transactional
-    public Location createLocation(LocationDto location) {
+    public Location createLocation(final LocationDto location) {
         log.info("Creating new location {}", location.toString());
         return locationRepository.save(LocationDto.toLocation(location));
     }
 
     @Override
     @Transactional
-    public Location updateLocation(LocationDto updatedLocation, Long locationId) {
+    public void updateLocation(final LocationDto updatedLocation, final Long locationId) {
         final Location oldLocation = findLocationById(locationId);
 
-        if(Objects.equals(oldLocation, null)){
-            createLocation(updatedLocation);
-        }
         log.info("Updating location {}", oldLocation);
-        Optional.ofNullable(oldLocation.getLocationName()).ifPresent(updatedLocation::setLocationName);
-        Optional.ofNullable(oldLocation.getCity()).ifPresent(updatedLocation::setCity);
-        Optional.ofNullable(oldLocation.getStreet()).ifPresent(updatedLocation::setStreet);
-        Optional.ofNullable(oldLocation.getHouseNumber()).ifPresent(updatedLocation::setHouseNumber);
-        Optional.ofNullable(oldLocation.getZipCode()).ifPresent(updatedLocation::setZipCode);
 
-        return locationRepository.save(oldLocation);
+        Optional.ofNullable(updatedLocation.getLocationName()).ifPresent(oldLocation::setLocationName);
+        Optional.ofNullable(updatedLocation.getCity()).ifPresent(oldLocation::setCity);
+        Optional.ofNullable(updatedLocation.getStreet()).ifPresent(oldLocation::setStreet);
+        Optional.ofNullable(updatedLocation.getHouseNumber()).ifPresent(oldLocation::setHouseNumber);
+        Optional.ofNullable(updatedLocation.getZipCode()).ifPresent(oldLocation::setZipCode);
+
+        locationRepository.save(oldLocation);
     }
 
     @Override
     @Transactional
-    public void deleteLocation(Long locationId) {
+    public void deleteLocation(final Long locationId) {
         log.info("Deleting location {}", findLocationById(locationId));
         locationRepository.deleteById(locationId);
     }
